[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Levels/Level1/Level1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/MobileHud/MobileHUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/HUD/HUD.tscn" type="PackedScene" id=4]

[node name="Main" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Level1" parent="." instance=ExtResource( 2 )]

[node name="MobileHUD" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 480, 270 )
current = true

[connection signal="continue_game" from="HUD" to="." method="_on_ContinueButton_pressed"]
[connection signal="quit_game" from="HUD" to="." method="_on_QuitButton_pressed"]
[connection signal="start_game" from="HUD" to="." method="_on_StartButton_pressed"]
